syntax = "proto3";

option java_package = "grpc.waterQuality";
option java_multiple_files = true;
option java_outer_classname = "WaterQualityImpl";
service waterSampleService {

// bidirectional
	rpc CreateSample (stream SampleRequest) returns (stream SampleResponse) {
	}
}

// the request message
message SampleRequest {
	string id = 1;
	string name = 2;
	string location = 3;
}

// the response message
message SampleResponse {
	string sample_id = 1;
	bool success = 2;
}
